@@ -11,8 +11,6 @@ import io.sitprep.sitprepapi.repo.PostRepo;
 import io.sitprep.sitprepapi.repo.UserInfoRepo;
 import io.sitprep.sitprepapi.websocket.WebSocketMessageSender;
 
-import org.springframework.security.core.context.SecurityContextHolder;
-
 import jakarta.transaction.Transactional;
 
 import org.slf4j.Logger;
@@ -29,7 +27,7 @@ import java.time.Instant;
 import java.util.*;
 import java.util.function.Function;
 import java.util.stream.Collectors;
-import java.util.Base64;   // <-- IMPORTANT
+import java.util.Base64;
 
 @Service
 public class PostService {
@@ -55,11 +53,14 @@ public class PostService {
         this.webSocketMessageSender = webSocketMessageSender;
     }
 
-    // +++ Service method for REST creation (handles MultipartFile) +++
+    // REST creation (multipart)
     @Transactional
-    public PostDto createPostWithFile(PostDto postDto, MultipartFile imageFile, String authenticatedUserEmail) throws IOException {
-        if (!postDto.getAuthor().equals(authenticatedUserEmail)) {
-            throw new SecurityException("User not authorized to create a post for another user.");
+    public PostDto createPostWithFile(PostDto postDto, MultipartFile imageFile, String actorEmail) throws IOException {
+        // MVP: enforce only if actor provided
+        if (actorEmail != null && !actorEmail.isBlank()) {
+            if (!actorEmail.equalsIgnoreCase(postDto.getAuthor())) {
+                throw new SecurityException("User not authorized to create a post for another user.");
+            }
         }
 
         Post post = new Post();
@@ -71,43 +72,38 @@ public class PostService {
         post.setTags(postDto.getTags());
         post.setMentions(postDto.getMentions());
 
-        // CRITICAL: Robustly read bytes and log errors internally.
         if (imageFile != null && !imageFile.isEmpty()) {
             try {
                 post.setImage(imageFile.getBytes());
             } catch (IOException e) {
-                // If the image read fails, log the error but allow the post (without image) to save.
-                logger.error("Failed to read bytes from uploaded image file during post creation. File name: {}", imageFile.getOriginalFilename(), e);
-                // Important: If you want the post to fail completely on image read failure, re-throw the IOException here:
-                // throw e;
+                logger.error("Failed to read uploaded image bytes: {}", imageFile.getOriginalFilename(), e);
             }
         }
 
         Post savedPost = postRepo.save(post);
         PostDto savedDto = convertToPostDto(savedPost);
 
-        // Broadcast and notify only AFTER the transaction commits
         TransactionSynchronizationManager.registerSynchronization(new TransactionSynchronization() {
-            @Override
-            public void afterCommit() {
+            @Override public void afterCommit() {
                 try {
                     notifyGroupMembersOfNewPost(savedPost);
                     webSocketMessageSender.sendNewPost(savedPost.getGroupId(), savedDto);
                 } catch (Exception e) {
-                    logger.error("Error during post-commit WS broadcast/notification for post {}", savedPost.getId(), e);
+                    logger.error("Post-commit WS/notify error for post {}", savedPost.getId(), e);
                 }
             }
         });
 
         return savedDto;
     }
-    // +++ END NEW REST HANDLER +++
 
-    // --- Existing createPostFromDto (now primarily for WS/text-only) ---
+    // WS/text-only creation
     @Transactional
-    public PostDto createPostFromDto(PostDto postDto, String authenticatedUserEmail) throws IOException {
-        if (!postDto.getAuthor().equals(authenticatedUserEmail)) {
-            throw new SecurityException("User not authorized to create a post for another user.");
+    public PostDto createPostFromDto(PostDto postDto, String actorEmail) throws IOException {
+        if (actorEmail != null && !actorEmail.isBlank()) {
+            if (!postDto.getAuthor().equalsIgnoreCase(actorEmail)) {
+                throw new SecurityException("User not authorized to create a post for another user.");
+            }
         }
 
         Post post = new Post();
@@ -129,30 +125,27 @@ public class PostService {
         Post savedPost = postRepo.save(post);
         PostDto savedDto = convertToPostDto(savedPost);
 
-        // Broadcast and notify only AFTER the transaction commits
         TransactionSynchronizationManager.registerSynchronization(new TransactionSynchronization() {
-            @Override
-            public void afterCommit() {
+            @Override public void afterCommit() {
                 try {
                     notifyGroupMembersOfNewPost(savedPost);
-                    // This is the broadcast that confirms the post to all clients
                     webSocketMessageSender.sendNewPost(savedPost.getGroupId(), savedDto);
                 } catch (Exception e) {
-                    logger.error("Error during post-commit WS broadcast/notification for post {}", savedPost.getId(), e);
+                    logger.error("Post-commit WS/notify error for post {}", savedPost.getId(), e);
                 }
             }
         });
 
         return savedDto;
     }
-    // --- End createPostFromDto update ---
 
+    // REST update (multipart) — actorEmail provided by controller; no SecurityContext
     @Transactional
-    public Post updatePost(Post post, MultipartFile imageFile) throws IOException {
-        String authenticatedUserEmail = SecurityContextHolder.getContext().getAuthentication().getName();
-
-        if (!post.getAuthor().equals(authenticatedUserEmail)) {
-            throw new SecurityException("User not authorized to update this post.");
+    public Post updatePost(Post post, MultipartFile imageFile, String actorEmail) throws IOException {
+        if (actorEmail != null && !"anonymous".equalsIgnoreCase(actorEmail)) {
+            if (post.getAuthor() == null || !post.getAuthor().equalsIgnoreCase(actorEmail)) {
+                throw new SecurityException("User not authorized to update this post.");
+            }
         }
 
         if (imageFile != null && !imageFile.isEmpty()) {
@@ -163,8 +156,7 @@ public class PostService {
         PostDto updatedPostDto = convertToPostDto(updatedPost);
 
         TransactionSynchronizationManager.registerSynchronization(new TransactionSynchronization() {
-            @Override
-            public void afterCommit() {
+            @Override public void afterCommit() {
                 webSocketMessageSender.sendNewPost(updatedPost.getGroupId(), updatedPostDto);
             }
         });
@@ -173,15 +165,13 @@ public class PostService {
     }
 
     @Transactional
-    public void deletePostAndBroadcast(Long postId, String requestingUserEmail) {
-        Optional<Post> postOpt = postRepo.findById(postId);
-        if (postOpt.isEmpty()) {
-            throw new RuntimeException("Post not found");
-        }
+    public void deletePostAndBroadcast(Long postId, String actorEmail) {
+        Post post = postRepo.findById(postId).orElseThrow(() -> new RuntimeException("Post not found"));
 
-        Post post = postOpt.get();
-        if (!post.getAuthor().equalsIgnoreCase(requestingUserEmail)) {
-            throw new SecurityException("User not authorized to delete this post.");
+        if (actorEmail != null && !"anonymous".equalsIgnoreCase(actorEmail)) {
+            if (post.getAuthor() == null || !post.getAuthor().equalsIgnoreCase(actorEmail)) {
+                throw new SecurityException("User not authorized to delete this post.");
+            }
         }
 
         postRepo.delete(post);
@@ -190,16 +180,12 @@ public class PostService {
 
     @Transactional
     public void updatePostFromDto(PostDto dto) {
-        String authenticatedUserEmail = dto.getAuthor();
+        String actorEmail = dto.getAuthor(); // WS path provides author in dto
 
-        Optional<Post> postOpt = postRepo.findById(dto.getId());
-        if (postOpt.isEmpty()) {
-            throw new IllegalArgumentException("Post not found for update: " + dto.getId());
-        }
+        Post post = postRepo.findById(dto.getId()).orElseThrow(() ->
+                new IllegalArgumentException("Post not found for update: " + dto.getId()));
 
-        Post post = postOpt.get();
-
-        if (!post.getAuthor().equals(authenticatedUserEmail)) {
+        if (actorEmail != null && !post.getAuthor().equalsIgnoreCase(actorEmail)) {
             throw new SecurityException("Not allowed to edit this post.");
         }
 
@@ -213,7 +199,6 @@ public class PostService {
             String encodedImage = parts.length == 2 ? parts[1] : parts[0];
             post.setImage(Base64.getDecoder().decode(encodedImage));
         } else if (dto.getBase64Image() == null && post.getImage() != null) {
-            // If base64Image is explicitly null in DTO but image exists in DB, delete it
             post.setImage(null);
         }
 
@@ -222,29 +207,20 @@ public class PostService {
         updatedDto.setTempId(dto.getTempId());
 
         TransactionSynchronizationManager.registerSynchronization(new TransactionSynchronization() {
-            @Override
-            public void afterCommit() {
+            @Override public void afterCommit() {
                 webSocketMessageSender.sendNewPost(updated.getGroupId(), updatedDto);
             }
         });
     }
 
-    public List<Post> getPostsByGroupId(String groupId) {
-        return postRepo.findPostsByGroupId(groupId);
-    }
+    public List<Post> getPostsByGroupId(String groupId) { return postRepo.findPostsByGroupId(groupId); }
 
-    /** Backfill: posts since timestamp for a group (by UPDATED time, ascending) */
     public List<PostDto> getPostsByGroupSince(String groupId, Instant since) {
         List<Post> rows = postRepo.findByGroupIdAndUpdatedAtAfterOrderByUpdatedAtAsc(groupId, since);
         if (rows.isEmpty()) return List.of();
 
-        Set<String> emails = rows.stream()
-                .map(Post::getAuthor)
-                .filter(Objects::nonNull)
-                .collect(Collectors.toSet());
-
-        Map<String, UserInfo> userByEmail = userInfoRepo.findByUserEmailIn(new ArrayList<>(emails))
-                .stream()
+        Set<String> emails = rows.stream().map(Post::getAuthor).filter(Objects::nonNull).collect(Collectors.toSet());
+        Map<String, UserInfo> userByEmail = userInfoRepo.findByUserEmailIn(new ArrayList<>(emails)).stream()
                 .collect(Collectors.toMap(UserInfo::getUserEmail, Function.identity()));
 
         List<PostDto> out = new ArrayList<>(rows.size());
@@ -257,50 +233,34 @@ public class PostService {
         List<Post> posts = postRepo.findPostsByGroupId(groupId);
         if (posts.isEmpty()) return List.of();
 
-        Set<String> emails = posts.stream()
-                .map(Post::getAuthor)
-                .filter(Objects::nonNull)
-                .collect(Collectors.toSet());
-
-        Map<String, UserInfo> userByEmail = userInfoRepo.findByUserEmailIn(new ArrayList<>(emails))
-                .stream()
+        Set<String> emails = posts.stream().map(Post::getAuthor).filter(Objects::nonNull).collect(Collectors.toSet());
+        Map<String, UserInfo> userByEmail = userInfoRepo.findByUserEmailIn(new ArrayList<>(emails)).stream()
                 .collect(Collectors.toMap(UserInfo::getUserEmail, Function.identity()));
 
-        return posts.stream().map(p -> convertToPostDto(p, userByEmail)).collect(Collectors.toList());
+        return posts.stream().map(p -> convertToPostDto(p, userByEmail)).toList();
     }
 
-    public Optional<Post> getPostById(Long id) {
-        return postRepo.findById(id);
-    }
+    public Optional<Post> getPostById(Long id) { return postRepo.findById(id); }
 
     @Transactional(Transactional.TxType.SUPPORTS)
-    public Optional<PostDto> getPostDtoById(Long id) {
-        return postRepo.findById(id).map(this::convertToPostDto);
-    }
+    public Optional<PostDto> getPostDtoById(Long id) { return postRepo.findById(id).map(this::convertToPostDto); }
 
     @Transactional(Transactional.TxType.SUPPORTS)
     public Map<String, PostSummaryDto> getLatestPostsForGroups(List<String> groupIds) {
         if (groupIds == null || groupIds.isEmpty()) return Collections.emptyMap();
 
         List<Post> candidates = postRepo.findLatestPostsByGroupIds(groupIds);
-
         Map<String, Post> bestByGroup = new HashMap<>();
         for (Post p : candidates) {
             Post cur = bestByGroup.get(p.getGroupId());
-            if (cur == null
-                    || p.getTimestamp().isAfter(cur.getTimestamp())
+            if (cur == null || p.getTimestamp().isAfter(cur.getTimestamp())
                     || (p.getTimestamp().equals(cur.getTimestamp()) && p.getId() > cur.getId())) {
                 bestByGroup.put(p.getGroupId(), p);
             }
         }
 
-        Set<String> emails = bestByGroup.values().stream()
-                .map(Post::getAuthor)
-                .filter(Objects::nonNull)
-                .collect(Collectors.toSet());
-
-        Map<String, UserInfo> userByEmail = userInfoRepo.findByUserEmailIn(new ArrayList<>(emails))
-                .stream()
+        Set<String> emails = bestByGroup.values().stream().map(Post::getAuthor).filter(Objects::nonNull).collect(Collectors.toSet());
+        Map<String, UserInfo> userByEmail = userInfoRepo.findByUserEmailIn(new ArrayList<>(emails)).stream()
                 .collect(Collectors.toMap(UserInfo::getUserEmail, Function.identity()));
 
         Map<String, PostSummaryDto> out = new HashMap<>();
@@ -323,19 +283,16 @@ public class PostService {
 
             out.put(e.getKey(), dto);
         }
-
         return out;
     }
 
     private void notifyGroupMembersOfNewPost(Post post) {
         groupRepo.findByGroupId(post.getGroupId()).ifPresentOrElse(group -> {
-            var recipientEmails = group.getMemberEmails() == null ? java.util.List.<String>of() :
-                    group.getMemberEmails().stream()
-                            .filter(email -> !email.equalsIgnoreCase(post.getAuthor()))
-                            .toList();
+            var recipientEmails = group.getMemberEmails() == null ? List.<String>of() :
+                    group.getMemberEmails().stream().filter(e -> !e.equalsIgnoreCase(post.getAuthor())).toList();
 
             if (recipientEmails.isEmpty()) {
-                logger.warn("No recipients found for group {}", group.getGroupName());
+                logger.warn("No recipients for group {}", group.getGroupName());
                 return;
             }
 
@@ -343,37 +300,26 @@ public class PostService {
             String authorFirst = authorOpt.map(UserInfo::getUserFirstName).orElse("Someone");
             String authorProfile = authorOpt.map(UserInfo::getProfileImageURL).orElse("/images/default-user-icon.png");
 
-            String notificationTitle = group.getGroupName();
+            String title = group.getGroupName();
             String snippet = post.getContent() == null ? "" :
                     (post.getContent().length() > 50 ? post.getContent().substring(0, 50) + "..." : post.getContent());
-            String notificationBody = String.format("%s posted in %s: '%s'",
-                    authorFirst, group.getGroupName(), snippet);
+            String body = String.format("%s posted in %s: '%s'", authorFirst, group.getGroupName(), snippet);
 
             String baseTargetUrl = GroupUrlUtil.getGroupTargetUrl(group);
             String targetUrl = baseTargetUrl + "?postId=" + post.getId();
 
-            java.util.List<UserInfo> users = userInfoRepo.findByUserEmailIn(recipientEmails);
-
+            List<UserInfo> users = userInfoRepo.findByUserEmailIn(recipientEmails);
             for (UserInfo user : users) {
-                // Presence-aware: WS if online, FCM if offline
                 notificationService.deliverPresenceAware(
-                        user.getUserEmail(),
-                        notificationTitle,
-                        notificationBody,
-                        authorFirst,
-                        authorProfile,
-                        "post_notification",
-                        post.getGroupId(),
-                        targetUrl,
-                        String.valueOf(post.getId()),
+                        user.getUserEmail(), title, body, authorFirst, authorProfile,
+                        "post_notification", post.getGroupId(), targetUrl, String.valueOf(post.getId()),
                         user.getFcmtoken()
                 );
             }
 
-            logger.info("📣 Post notification processed for group '{}' to {} members.", group.getGroupName(), users.size());
-        }, () -> logger.warn("⚠️ Group with ID {} not found for FCM notification.", post.getGroupId()));
+            logger.info("📣 Post notification sent for '{}' to {} members.", group.getGroupName(), users.size());
+        }, () -> logger.warn("⚠️ Group with ID {} not found (notify)", post.getGroupId()));
     }
-
 
     private PostDto convertToPostDto(Post post) {
         PostDto dto = new PostDto();
@@ -384,24 +330,21 @@ public class PostService {
         dto.setGroupName(post.getGroupName());
         dto.setTimestamp(post.getTimestamp());
         dto.setEditedAt(post.getEditedAt());
-        dto.setUpdatedAt(post.getUpdatedAt());   // <-- NEW
-
+        dto.setUpdatedAt(post.getUpdatedAt());
         if (post.getImage() != null) {
-            String base64Image = java.util.Base64.getEncoder().encodeToString(post.getImage());
-            dto.setBase64Image("data:image/jpeg;base64," + base64Image);
+            String b64 = java.util.Base64.getEncoder().encodeToString(post.getImage());
+            dto.setBase64Image("data:image/jpeg;base64," + b64);
         }
-
-        dto.setReactions(post.getReactions() != null ? post.getReactions() : new java.util.HashMap<>());
-        dto.setTags(post.getTags() != null ? post.getTags() : new java.util.ArrayList<>());
-        dto.setMentions(post.getMentions() != null ? post.getMentions() : new java.util.ArrayList<>());
+        dto.setReactions(post.getReactions() != null ? post.getReactions() : new HashMap<>());
+        dto.setTags(post.getTags() != null ? post.getTags() : new ArrayList<>());
+        dto.setMentions(post.getMentions() != null ? post.getMentions() : new ArrayList<>());
         dto.setCommentsCount(post.getCommentsCount());
 
-        userInfoRepo.findByUserEmail(post.getAuthor()).ifPresent(authorInfo -> {
-            dto.setAuthorFirstName(authorInfo.getUserFirstName());
-            dto.setAuthorLastName(authorInfo.getUserLastName());
-            dto.setAuthorProfileImageURL(authorInfo.getProfileImageURL());
+        userInfoRepo.findByUserEmail(post.getAuthor()).ifPresent(u -> {
+            dto.setAuthorFirstName(u.getUserFirstName());
+            dto.setAuthorLastName(u.getUserLastName());
+            dto.setAuthorProfileImageURL(u.getProfileImageURL());
         });
-
         return dto;
     }
 
@@ -414,25 +357,22 @@ public class PostService {
         dto.setGroupName(post.getGroupName());
         dto.setTimestamp(post.getTimestamp());
         dto.setEditedAt(post.getEditedAt());
-        dto.setUpdatedAt(post.getUpdatedAt());   // <-- NEW
-
+        dto.setUpdatedAt(post.getUpdatedAt());
         if (post.getImage() != null) {
-            String base64Image = java.util.Base64.getEncoder().encodeToString(post.getImage());
-            dto.setBase64Image("data:image/jpeg;base64," + base64Image);
+            String b64 = java.util.Base64.getEncoder().encodeToString(post.getImage());
+            dto.setBase64Image("data:image/jpeg;base64," + b64);
         }
-
-        dto.setReactions(post.getReactions() != null ? post.getReactions() : new java.util.HashMap<>());
-        dto.setTags(post.getTags() != null ? post.getTags() : new java.util.ArrayList<>());
-        dto.setMentions(post.getMentions() != null ? post.getMentions() : new java.util.ArrayList<>());
+        dto.setReactions(post.getReactions() != null ? post.getReactions() : new HashMap<>());
+        dto.setTags(post.getTags() != null ? post.getTags() : new ArrayList<>());
+        dto.setMentions(post.getMentions() != null ? post.getMentions() : new ArrayList<>());
         dto.setCommentsCount(post.getCommentsCount());
 
-        UserInfo authorInfo = userByEmail.get(post.getAuthor());
-        if (authorInfo != null) {
-            dto.setAuthorFirstName(authorInfo.getUserFirstName());
-            dto.setAuthorLastName(authorInfo.getUserLastName());
-            dto.setAuthorProfileImageURL(authorInfo.getProfileImageURL());
+        UserInfo u = userByEmail.get(post.getAuthor());
+        if (u != null) {
+            dto.setAuthorFirstName(u.getUserFirstName());
+            dto.setAuthorLastName(u.getUserLastName());
+            dto.setAuthorProfileImageURL(u.getProfileImageURL());
         }
-
         return dto;
     }
 }
